--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-images": "^1.8.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
