--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "recharts": "^2.12.7",
     "swr": "^2.2.5"
   },
   "devDependencies": {
